updated social media icons to svg

--- a/bespoke-bullet-icons/index.html
+++ b/bespoke-bullet-icons/index.html
@@ -1,25 +1,17 @@
 <!DOCTYPE html>
-
 <html>
-
 	<head>
-
 		<meta charset="utf-8">
-		<title>Lists</title>
-		<meta name="robots" content="noindex, nofollow, noodp, noydir">
+		<title>Bespoke Bullet Icon</title>
+		<meta name="robots" content="noindex, nofollow">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		 <!--[if lt IE 9]>
-    		<script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    	<![endif]-->
 		<link rel="stylesheet" href="styles.css">
-
 	</head>
-
 	<body>
 
 		<header>
 
-			<h1>Lists</h1>
+			<h1>Bespoke Bullet Icon</h1>
 
 		</header>
 
@@ -27,51 +19,10 @@
 
 			<div class="container">
 
-				<h2>Ordered List</h2>
-				
-				<ol>
-					<li>Item One</li>
-					<li>Item Two</li>
-					<li>Item Three
-						<ol>
-							<li>Item One</li>
-							<li>Item Two</li>
-						</ol>
-					</li>
-				</ol>
-
-				<h2>Unordered List</h2>
-
-				<ul>
-					<li>Item One</li>
-					<li>Item Two</li>
-					<li>Item Three
-						<ul>
-							<li>Item One</li>
-							<li>Item Two</li>
-						</ul>
-					</li>
-				</ul>
-
-				<h2>Plain List</h2>
-
-				<ul class="list--no-bullets">
-					<li>Item One</li>
-					<li>Item Two</li>
-					<li>Item Three
-						<ul class="list--no-bullets">
-							<li>Item One</li>
-							<li>Item Two</li>
-						</ul>
-					</li>
-				</ul>
-
-				<h2>Custom Bullets List</h2>
-
-				<ul class="list--no-bullets">
-					<li><span class="minus"></span>Item One</li>
-					<li><span class="minus"></span>Item Two</li>
-					<li><span class="minus"></span>Item Three</li>
+				<ul class="no-bullets">
+					<li><span class="bullet"></span>Item One</li>
+					<li><span class="bullet"></span>Item Two</li>
+					<li><span class="bullet"></span>Item Three</li>
 				</ul>
 
 			</div> <!-- .container-->
@@ -80,7 +31,7 @@
 
 		<footer>
 
-			<small>Powered by <a href="http://github.com">Github</a></small>
+			<small><a href="https://opensource.org/licenses/MIT">MIT License</a></small>
 
 		</footer>	
 
