--- a/responsive-dropdown-navigation/index.html
+++ b/responsive-dropdown-navigation/index.html
@@ -1,20 +1,12 @@
 <!DOCTYPE html>
-
 <html>
-
 	<head>
-
 		<meta charset="utf-8">
 		<title>Responsive Navigation</title>
-		<meta name="robots" content="noindex, nofollow, noodp, noydir">
+		<meta name="robots" content="noindex, nofollow">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<!--[if lt IE 9]>
-    		<script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-		<![endif]-->
 		<link rel="stylesheet" href="styles.css">
-
 	</head>
-
 	<body>
 		
 		<header>
@@ -38,9 +30,9 @@
 			</ul>
 		</nav>
 
-		<div id="wrapper" class="clearfix">
+		<div class="wrapper" class="clearfix">
 
-			<div id="container">
+			<div class="container">
 
 					<h2>Heading</h2>
 
@@ -52,9 +44,9 @@
 
 					<p>Quisque ultrices gravida pede. Mauris accumsan vulputate tellus. Phasellus condimentum bibendum dolor. Mauris sed ipsum. Phasellus in diam. Nam sapien ligula, consectetuer id, hendrerit in, cursus sed, leo. Nam tincidunt rhoncus urna. Aliquam id massa ut nibh bibendum imperdiet. Curabitur neque mauris, porta vel, lacinia quis, placerat ultrices, orci.</p>		
 
-			</div> <!-- #container-->
+			</div> <!-- .container-->
 
-		</div> <!-- #wrapper-->
+		</div> <!-- .wrapper-->
 
 		<footer>
 
