--- a/social-media-icons/index.html
+++ b/social-media-icons/index.html
@@ -1,20 +1,12 @@
 <!DOCTYPE html>
-
 <html>
-
 	<head>
-
 		<meta charset="utf-8">
 		<title>Social Media Buttons</title>
-		<meta name="robots" content="noindex, nofollow, noodp, noydir">
+		<meta name="robots" content="noindex, nofollow">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<!--[if lt IE 9]>
-    		<script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-		<![endif]-->
 		<link rel="stylesheet" href="styles.css">
-		
 	</head>
-
 	<body>
 
 		<header>
@@ -29,28 +21,28 @@
 
 					<ul class="social-channels">
 						<li>
-							<a rel="external" class="facebook" target="_blank" href="http://facebook.com" title="Follow us on Facebook"></a>
+							<a rel="external" class="facebook" target="_blank" href="http://facebook.com" title="Follow us on Facebook">Facebook</a>
 						</li>
 						<li>
-							<a rel="external" class="youtube" target="_blank" href="http://youtube.com" title="Subscribe to our YouTube channel"></a>
+							<a rel="external" class="youtube" target="_blank" href="http://youtube.com" title="Subscribe to our YouTube channel">Youtube</a>
 						</li>
 						<li>
-							<a rel="external" class="twitter" target="_blank" href="http://twitter.com" title="Follow us on Twitter"></a>
+							<a rel="external" class="twitter" target="_blank" href="http://twitter.com" title="Follow us on Twitter">Twitter</a>
 						</li>
 						<li>
-							<a rel="external" class="github" target="_blank" href="http://github.com" title="Follow us on Github"></a>
+							<a rel="external" class="github" target="_blank" href="http://github.com" title="Follow us on Github">Github</a>
 						</li>
 						<li>
-							<a rel="external" class="googleplus" target="_blank" href="http://google.com" title="Follow us on GooglePlus"></a>
+							<a rel="external" class="googleplus" target="_blank" href="http://google.com" title="Follow us on GooglePlus">GooglePlus</a>
 						</li>
 						<li>
-							<a rel="external" class="linkedin" target="_blank" href="http://linkedin.com" title="Follow us on LinkedIn"></a>
+							<a rel="external" class="linkedin" target="_blank" href="http://linkedin.com" title="Follow us on LinkedIn">LinkedIn</a>
 						</li>
 						<li>
-							<a rel="external" class="flickr" target="_blank" href="http://flickr.com" title="Follow us on Flickr"></a>
+							<a rel="external" class="flickr" target="_blank" href="http://flickr.com" title="Follow us on Flickr">Flickr</a>
 						</li>
 						<li>
-							<a rel="external" class="pinterest" target="_blank" href="http://pinterest.com" title="Follow us on Pinterest"></a>
+							<a rel="external" class="pinterest" target="_blank" href="http://pinterest.com" title="Follow us on Pinterest">Pinterest</a>
 						</li>
 						
 					</ul>
@@ -66,5 +58,4 @@
 		</footer>
 
 	</body>
-
 </html>
