changed to SVG from PNG

--- a/social-media-icons/index.html
+++ b/social-media-icons/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<title>Social Media Buttons</title>
+		<title>Social Media Icons</title>
 		<meta name="robots" content="noindex, nofollow">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="stylesheet" href="styles.css">
@@ -11,7 +11,7 @@
 
 		<header>
 
-			<h1>Social Media Buttons</h1>
+			<h1>Social Media Icons</h1>
 
 		</header>
 
