--- a/social-media-icons-sprite/index.html
+++ b/social-media-icons-sprite/index.html
@@ -1,20 +1,17 @@
 <!DOCTYPE html>
-
 <html>
-
 	<head>
 		<meta charset="utf-8">
-		<title>Social Media Buttons with Image Sprite</title>
+		<title>Social Media Icons Sprite</title>
 		<meta name="robots" content="noindex, nofollow">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="stylesheet" href="styles.css">
 	</head>
-
 	<body>
 
 		<header>
 
-			<h1>Social Media Buttons with Image Sprite</h1>
+			<h1>Social Media Icons Sprite</h1>
 
 		</header>
 
@@ -22,43 +19,42 @@
 
 			<div class="container">
 
-				<ul class="social-channels">
-					<li class="facebook">
-						<a rel="external" target="_blank" href="http://facebook.com" title="Follow us on Facebook"></a>
-					</li>
-					<li class="youtube">
-						<a rel="external" target="_blank" href="http://youtube.com" title="Follow us on Youtube"></a>
-					</li>
-					<li class="twitter">
-						<a rel="external" target="_blank" href="http://twitter.com" title="Follow us on Twitter"></a>
-					</li>
-					<li class="github">
-						<a rel="external" target="_blank" href="http://github.com" title="Follow us on Github"></a>
-					</li>
-					<li class="googleplus">
-						<a rel="external" target="_blank" href="http://google.com" title="Follow us on GooglePlus"></a>
-					</li>
-					<li class="linkedin">
-						<a rel="external" target="_blank" href="http://linkedin.com" title="Follow us on LinkedIn"></a>
-					</li>
-					<li class="flickr">
-						<a rel="external" target="_blank" href="http://flickr.com" title="Follow us on Flickr"></a>
-					</li>
-					<li class="pinterest">
-						<a rel="external" target="_blank" href="http://pinterest.com" title="Follow us on Pinterest"></a>
-					</li>
-				</ul>
+					<ul class="social-channels">
+						<li>
+							<a rel="external" class="facebook" target="_blank" href="http://facebook.com" title="Follow us on Facebook">Facebook</a>
+						</li>
+						<li>
+							<a rel="external" class="youtube" target="_blank" href="http://youtube.com" title="Subscribe to our YouTube channel">Youtube</a>
+						</li>
+						<li>
+							<a rel="external" class="twitter" target="_blank" href="http://twitter.com" title="Follow us on Twitter">Twitter</a>
+						</li>
+						<li>
+							<a rel="external" class="github" target="_blank" href="http://github.com" title="Follow us on Github">Github</a>
+						</li>
+						<li>
+							<a rel="external" class="googleplus" target="_blank" href="http://google.com" title="Follow us on GooglePlus">GooglePlus</a>
+						</li>
+						<li>
+							<a rel="external" class="linkedin" target="_blank" href="http://linkedin.com" title="Follow us on LinkedIn">LinkedIn</a>
+						</li>
+						<li>
+							<a rel="external" class="flickr" target="_blank" href="http://flickr.com" title="Follow us on Flickr">Flickr</a>
+						</li>
+						<li>
+							<a rel="external" class="pinterest" target="_blank" href="http://pinterest.com" title="Follow us on Pinterest">Pinterest</a>
+						</li>
+					</ul>
 
 			</div> <!-- .container-->
 
 		</div> <!-- .wrapper-->	
 
 		<footer>
-			
+
 			<small>Powered by <a href="http://github.com">Github</a></small>
 
 		</footer>
 
 	</body>
-
 </html>
