--- a/flexbox/index.html
+++ b/flexbox/index.html
@@ -1,21 +1,13 @@
 
 <!DOCTYPE html>
-
 <html>
-
 	<head>
-
 		<meta charset="utf-8">
 		<title>FlexBox</title>
-		<meta name="robots" content="noindex, nofollow, noodp, noydir">
+		<meta name="robots" content="noindex, nofollow">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<!--[if lt IE 9]>
-    		<script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-		<![endif]-->
 		<link rel="stylesheet" href="styles.css">
-
 	</head>
-
 	<body>
 
 		<header>
@@ -62,14 +54,6 @@
 					<li><a href="#"><img src="images/dismemberment-detail.jpg" alt="dismemberment detail"></a></li>
 				</ul>
 
-				<h3>Flex Space Around &amp; Center</h3>
-
-				<ul class="gallery-5">
-					<li><a href="#"><img src="images/dismemberment-detail.jpg" alt="dismemberment detail"></a></li>
-					<li><a href="#"><img src="images/dismemberment-detail.jpg" alt="dismemberment detail"></a></li>
-					<li><a href="#"><img src="images/dismemberment-detail.jpg" alt="dismemberment detail"></a></li>
-				</ul>
-
 			</div> <!-- .container-->
 
 		</div> <!-- .wrapper-->
@@ -81,5 +65,4 @@
 		</footer>
 
 	</body>
-
 </html>
