--- a/flexbox/index.html
+++ b/flexbox/index.html
@@ -1,68 +1,52 @@
-
 <!DOCTYPE html>
 <html>
-	<head>
-		<meta charset="utf-8">
-		<title>FlexBox</title>
-		<meta name="robots" content="noindex, nofollow">
-		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<link rel="stylesheet" href="styles.css">
-	</head>
-	<body>
 
-		<header>
+<head>
+  <meta charset="utf-8">
+  <title>Flex Box</title>
+  <meta name="robots" content="noindex, nofollow">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="styles.css">
+</head>
 
-			<h1>FlexBox</h1>
+<body>
+  <header>
+    <h1>Flex Box</h1>
+  </header>
+  <div class="wrapper">
+    <div class="container">
+      <h2>Flex Alignment</h2>
+      <h3>Flex End</h3>
+      <div class="gallery">
+        <img src="images/dismemberment-detail.jpg" alt="dismemberment detail">
+        <img src="images/dismemberment-detail.jpg" alt="dismemberment detail">
+        <img src="images/dismemberment-detail.jpg" alt="dismemberment detail">
+      </div>
+      <h3>Flex Center</h3>
+      <div class="gallery-2">
+        <img src="images/dismemberment-detail.jpg" alt="dismemberment detail">
+        <img src="images/dismemberment-detail.jpg" alt="dismemberment detail">
+        <img src="images/dismemberment-detail.jpg" alt="dismemberment detail">
+      </div>
+      <h3>Flex Space Between</h3>
+      <div class="gallery-3">
+        <img src="images/dismemberment-detail.jpg" alt="dismemberment detail">
+        <img src="images/dismemberment-detail.jpg" alt="dismemberment detail">
+        <img src="images/dismemberment-detail.jpg" alt="dismemberment detail">
+      </div>
+      <h3>Flex Space Around</h3>
+      <div class="gallery-4">
+        <img src="images/dismemberment-detail.jpg" alt="dismemberment detail">
+        <img src="images/dismemberment-detail.jpg" alt="dismemberment detail">
+        <img src="images/dismemberment-detail.jpg" alt="dismemberment detail">
+      </div>
+    </div>
+    <!-- .container-->
+  </div>
+  <!-- .wrapper-->
+  <footer>
+    <small>Powered by NGINX</small>
+  </footer>
+</body>
 
-		</header>
-
-		<div class="wrapper">
-
-			<div class="container">
-
-				<h2>Flex Alignment</h2>
-
-				<h3>Flex End</h3>
-
-				<ul class="gallery">
-					<li><a href="#"><img src="images/dismemberment-detail.jpg" alt="dismemberment detail"></a></li>
-					<li><a href="#"><img src="images/dismemberment-detail.jpg" alt="dismemberment detail"></a></li>
-					<li><a href="#"><img src="images/dismemberment-detail.jpg" alt="dismemberment detail"></a></li>
-				</ul>
-
-				<h3>Flex Center</h3>
-
-				<ul class="gallery-2">
-					<li><a href="#"><img src="images/dismemberment-detail.jpg" alt="dismemberment detail"></a></li>
-					<li><a href="#"><img src="images/dismemberment-detail.jpg" alt="dismemberment detail"></a></li>
-					<li><a href="#"><img src="images/dismemberment-detail.jpg" alt="dismemberment detail"></a></li>
-				</ul>
-
-				<h3>Flex Space Between</h3>
-
-				<ul class="gallery-3">
-					<li><a href="#"><img src="images/dismemberment-detail.jpg" alt="dismemberment detail"></a></li>
-					<li><a href="#"><img src="images/dismemberment-detail.jpg" alt="dismemberment detail"></a></li>
-					<li><a href="#"><img src="images/dismemberment-detail.jpg" alt="dismemberment detail"></a></li>
-				</ul>
-
-				<h3>Flex Space Around</h3>
-
-				<ul class="gallery-4">
-					<li><a href="#"><img src="images/dismemberment-detail.jpg" alt="dismemberment detail"></a></li>
-					<li><a href="#"><img src="images/dismemberment-detail.jpg" alt="dismemberment detail"></a></li>
-					<li><a href="#"><img src="images/dismemberment-detail.jpg" alt="dismemberment detail"></a></li>
-				</ul>
-
-			</div> <!-- .container-->
-
-		</div> <!-- .wrapper-->
-
-		<footer>
-
-			<small>Powered by NGINX</small>
-
-		</footer>
-
-	</body>
 </html>
