removed header in css

--- a/flexbox/index.html
+++ b/flexbox/index.html
@@ -18,27 +18,27 @@
       <h2>Flex Alignment</h2>
       <h3>Flex End</h3>
       <div class="gallery">
-        <img src="images/dismemberment-detail.jpg" alt="dismemberment detail">
-        <img src="images/dismemberment-detail.jpg" alt="dismemberment detail">
-        <img src="images/dismemberment-detail.jpg" alt="dismemberment detail">
+        <div><img src="images/dismemberment-detail.jpg" alt="dismemberment detail"></div>
+        <div><img src="images/dismemberment-detail.jpg" alt="dismemberment detail"></div>
+        <div><img src="images/dismemberment-detail.jpg" alt="dismemberment detail"></div>
       </div>
       <h3>Flex Center</h3>
       <div class="gallery-2">
-        <img src="images/dismemberment-detail.jpg" alt="dismemberment detail">
-        <img src="images/dismemberment-detail.jpg" alt="dismemberment detail">
-        <img src="images/dismemberment-detail.jpg" alt="dismemberment detail">
+        <div><img src="images/dismemberment-detail.jpg" alt="dismemberment detail"></div>
+        <div><img src="images/dismemberment-detail.jpg" alt="dismemberment detail"></div>
+        <div><img src="images/dismemberment-detail.jpg" alt="dismemberment detail"></div>
       </div>
       <h3>Flex Space Between</h3>
       <div class="gallery-3">
-        <img src="images/dismemberment-detail.jpg" alt="dismemberment detail">
-        <img src="images/dismemberment-detail.jpg" alt="dismemberment detail">
-        <img src="images/dismemberment-detail.jpg" alt="dismemberment detail">
+        <div><img src="images/dismemberment-detail.jpg" alt="dismemberment detail"></div>
+        <div><img src="images/dismemberment-detail.jpg" alt="dismemberment detail"></div>
+        <div><img src="images/dismemberment-detail.jpg" alt="dismemberment detail"></div>
       </div>
       <h3>Flex Space Around</h3>
       <div class="gallery-4">
-        <img src="images/dismemberment-detail.jpg" alt="dismemberment detail">
-        <img src="images/dismemberment-detail.jpg" alt="dismemberment detail">
-        <img src="images/dismemberment-detail.jpg" alt="dismemberment detail">
+        <div><img src="images/dismemberment-detail.jpg" alt="dismemberment detail"></div>
+        <div><img src="images/dismemberment-detail.jpg" alt="dismemberment detail"></div>
+        <div><img src="images/dismemberment-detail.jpg" alt="dismemberment detail"></div>
       </div>
     </div>
     <!-- .container-->
