--- a/thumbnail-gallery-zoom/index.html
+++ b/thumbnail-gallery-zoom/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Layout</title>
+  <title>Thumbnail Gallery Zoom</title>
   <meta name="robots" content="noindex, nofollow">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="styles.css">
@@ -11,14 +11,26 @@
 
 <body>
   <header>
-    <h1>Site Name</h1>
+    <h1>Thumbnail Gallery Zoom</h1>
   </header>
   <div class="wrapper">
     <div class="container">
       <ul class="gallery">
-        <li><div><a href=""><img src="images/cat.jpg" alt="cat"></a></div></li>
-        <li><div><a href=""><img src="images/cat.jpg" alt="cat"></a></div></li>
-        <li><div><a href=""><img src="images/cat.jpg" alt="cat"></a></div></li>
+        <li>
+          <div>
+            <a href=""><img src="images/misplaced-ruins-1.jpg" alt="cat"></a>
+          </div>
+        </li>
+        <li>
+          <div>
+            <a href=""><img src="images/misplaced-ruins-2.jpg" alt="cat"></a>
+          </div>
+        </li>
+        <li>
+          <div>
+            <a href=""><img src="images/misplaced-ruins-3.jpg" alt="cat"></a>
+          </div>
+        </li>
       </ul>
     </div>
     <!-- .container-->
