--- a/thumbnail-gallery-captions/index.html
+++ b/thumbnail-gallery-captions/index.html
@@ -1,7 +1,5 @@
 <!DOCTYPE html>
-
 <html>
-
 	<head>
 		<meta charset="utf-8">
 		<title>Thumbnail Gallery with Captions</title>
@@ -9,7 +7,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="stylesheet" href="styles.css">
 	</head>
-
+	
 	<body>
 
 		<header>
@@ -26,7 +24,7 @@
 					<li>
 						<div class="item">
 							<a href="#">
-								<img src="images/dismemberment-detail.jpg" alt="dismemberment detail">
+								<img src="images/damian-ortega-1.jpg" alt="sculpture">
 								<span>Gallery One</span>
 							</a>
 						</div>
@@ -34,7 +32,7 @@
 					<li>
 						<div class="item">
 							<a href="#">
-								<img src="images/dismemberment-detail.jpg" alt="dismemberment detail">
+								<img src="images/damian-ortega-2.jpg" alt="sculpture">
 								<span>Gallery Two</span>
 							</a>
 						</div>
@@ -42,7 +40,7 @@
 					<li>
 						<div class="item">
 							<a href="#">
-								<img src="images/dismemberment-detail.jpg" alt="dismemberment detail">
+								<img src="images/damian-ortega-3.jpg" alt="sculpture">
 								<span>Gallery Three</span>
 							</a>
 						</div>
