added bespoke bullet points

--- a/typography/index.html
+++ b/typography/index.html
@@ -44,6 +44,10 @@
 
 				<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
 
+				<h2>Text Alignment</h2>
+
+				<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+
 				<p class="text-right">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
 
 				<p class="text-center">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Etiam sit amet elit vitae arcu interdum ullamcorper. Nullam ultrices, nisi quis scelerisque convallis, augue neque tempor enim, et mattis justo nibh eu elit.</p>
@@ -69,6 +73,14 @@
 				<p>Logo using image replacement technique.</p>
 
 				<div class="logo"><h1>Company Name</h1></div>
+
+				<h2>Bespoke Bullet Points</h2>
+
+				<ul class="no-bullets">
+					<li><span class="bullet"></span>Item One</li>
+					<li><span class="bullet"></span>Item Two</li>
+					<li><span class="bullet"></span>Item Three</li>
+				</ul>
 
 			</div> <!-- .container-->
 
