added some flexbox examples

--- a/flexbox/index.html
+++ b/flexbox/index.html
@@ -40,6 +40,56 @@
         <div><img src="images/dismemberment-detail.jpg" alt="dismemberment detail"></div>
         <div><img src="images/dismemberment-detail.jpg" alt="dismemberment detail"></div>
       </div>
+      <h2>Ordering Items</h2>
+        <h3>Specific Order</h3>
+      <div class="gallery-5">
+        <div><img src="images/dismemberment-detail.jpg" alt="dismemberment detail"></div>
+        <div class="foo"><img src="images/dismemberment-detail.jpg" alt="dismemberment detail"></div>
+        <div><img src="images/dismemberment-detail.jpg" alt="dismemberment detail"></div>
+      </div>
+        <h3>Reverse Order</h3>
+      <div class="gallery-6">
+        <div><img src="images/dismemberment-detail.jpg" alt="dismemberment detail"></div>
+        <div><img src="images/dismemberment-detail.jpg" alt="dismemberment detail"></div>
+        <div><img src="images/dismemberment-detail.jpg" alt="dismemberment detail"></div>
+      </div>
+      <h3>Column</h3>
+      <div class="gallery-7">
+        <div><img src="images/dismemberment-detail.jpg" alt="dismemberment detail"></div>
+        <div><img src="images/dismemberment-detail.jpg" alt="dismemberment detail"></div>
+        <div><img src="images/dismemberment-detail.jpg" alt="dismemberment detail"></div>
+      </div>
+       <h3>Grow Items</h3>
+      <div class="gallery-8">
+        <div><img src="images/dismemberment-detail.jpg" alt="dismemberment detail"></div>
+        <div class="baz"><img src="images/dismemberment-detail.jpg" alt="dismemberment detail"></div>
+        <div><img src="images/dismemberment-detail.jpg" alt="dismemberment detail"></div>
+      </div>
+      <h3>Grow Items ???</h3>
+      <div class="gallery-9">
+        <div><img src="images/dismemberment-detail.jpg" alt="dismemberment detail"></div>
+        <div class="bar"><img src="images/dismemberment-detail.jpg" alt="dismemberment detail"></div>
+        <div><img src="images/dismemberment-detail.jpg" alt="dismemberment detail"></div>
+      </div>
+      <h2>Align Content</h2>
+      <h3>Flex End</h3>
+      <div class="gallery-10">
+        <div><img src="images/dismemberment-detail.jpg" alt="dismemberment detail"></div>
+        <div><img src="images/dismemberment-detail.jpg" alt="dismemberment detail"></div>
+        <div><img src="images/dismemberment-detail.jpg" alt="dismemberment detail"></div>
+      </div>
+      <h3>Center</h3>
+      <div class="gallery-11">
+        <div><img src="images/dismemberment-detail.jpg" alt="dismemberment detail"></div>
+        <div><img src="images/dismemberment-detail.jpg" alt="dismemberment detail"></div>
+        <div><img src="images/dismemberment-detail.jpg" alt="dismemberment detail"></div>
+      </div>
+      <h3>Baseline</h3>
+      <div class="gallery-12">
+        <div><img src="images/dismemberment-detail.jpg" alt="dismemberment detail"></div>
+        <div><img src="images/dismemberment-detail.jpg" alt="dismemberment detail"></div>
+        <div><img src="images/dismemberment-detail.jpg" alt="dismemberment detail"></div>
+      </div>
     </div>
     <!-- .container-->
   </div>
