--- a/bar-graphs/index.html
+++ b/bar-graphs/index.html
@@ -1,58 +1,45 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<meta charset="utf-8">	
-		<title>Layout</title>
-		<meta name="robots" content="noindex, nofollow">
-		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<link rel="stylesheet" href="styles.css">
-	</head>
 
-	<body>
+<head>
+    <meta charset="utf-8">
+    <title>Bar Graphs</title>
+    <meta name="robots" content="noindex, nofollow">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="styles.css">
+</head>
 
-		<header>
-
-			<h1>Bar Graph</h1>
-
-		</header> 
-
-		<div class="wrapper">
-
-			<div class="container">
-
-				<h2>Maui's Dolphin Population Decline</h2>
-
-				<p>95.5% of all human-induced mortalities are related to fishing activities</p>
-
-				<ul class="mortalities">
-					<li><em>Set Net</em><span style="width:70%;">70%</span></li>
-					<li><em>Trawling</em><span style="width:26%;">26%</span></li>
-					<li><em>Mining</em><span style="width:2%;">2%</span></li>
-					<li><em>Vessel Traffic</em><span style="width:1%;">1%</span></li>
-					<li><em>Other (polution, disease</em><span style="width:1%;">1%</span></li>
-				</ul>
-
-				<h3>Maui's population Decline</h3>
-
-				<ul class="decline">
-					<li>1985<em>140</em><span style="height:93%;"></span></li>
-					<li>1998<em>80</em><span style="height:53%;"></span></li>
-					<li>2001<em>75</em><span style="height:50%;"></span></li>
-					<li>2002<em>69</em><span style="height:46%;"></span></li>
-					<li>2004<em>111</em><span style="height:74%;"></span></li>
-					<li>2011<em>55</em><span style="height:36%;"></span></li>
-				</ul>
-
-			</div> <!-- .container-->
-
-		</div> <!-- .wrapper-->
-
-		<footer>
-
-			<small>Powered by NGINX</small>
-
-		</footer> 
-
-	</body>
+<body>
+    <header>
+        <h1>Bar Graphs</h1>
+    </header>
+    <div class="wrapper">
+        <div class="container">
+            <h2>Maui's Dolphin Populaton Decline</h2>
+            <p>95.5% of all human-induced mortalities are related to fishing activities.</p>
+            <ul class="mortalities">
+                <li><em>Set Net</em><span style="width:70%;">70%</span></li>
+                <li><em>Trawling</em><span style="width:26%;">26%</span></li>
+                <li><em>Mining</em><span style="width:2%;">2%</span></li>
+                <li><em>Vessel Traffic</em><span style="width:1%;">1%</span></li>
+                <li><em>Other (polution, disease)</em><span style="width:1%;">1%</span></li>
+            </ul>
+            <h2>Maui's Population Decline</h2>
+            <ul class="decline">
+                <li>1985<em>140</em><span style="height:93%;"></span></li>
+                <li>1998<em>80</em><span style="height:53%;"></span></li>
+                <li>2001<em>75</em><span style="height:50%;"></span></li>
+                <li>2002<em>69</em><span style="height:46%;"></span></li>
+                <li>2004<em>111</em><span style="height:74%;"></span></li>
+                <li>2011<em>55</em><span style="height:36%;"></span></li>
+            </ul>
+        </div>
+        <!-- .container-->
+    </div>
+    <!-- .wrapper-->
+    <footer>
+        <small>Powered by NGINX</small>
+    </footer>
+</body>
 
 </html>
