--- a/thumbnail-gallery-captions/index.html
+++ b/thumbnail-gallery-captions/index.html
@@ -1,62 +1,53 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<meta charset="utf-8">
-		<title>Thumbnail Gallery with Captions</title>
-		<meta name="robots" content="noindex, nofollow">
-		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<link rel="stylesheet" href="styles.css">
-	</head>
-	
-	<body>
 
-		<header>
+<head>
+    <meta charset="utf-8">
+    <title>Thumbnail Gallery with Captions</title>
+    <meta name="robots" content="noindex, nofollow">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="styles.css">
+</head>
 
-			<h1>Thumbnail Gallery with Captions</h1>
-
-		</header>
-
-		<div class="wrapper">
-
-			<div class="container">
-
-				<ul class="gallery">
-					<li>
-						<div class="item">
-							<a href="#">
-								<img src="images/damian-ortega-1.jpg" alt="sculpture">
-								<span>Gallery One</span>
-							</a>
-						</div>
-					</li>
-					<li>
-						<div class="item">
-							<a href="#">
-								<img src="images/damian-ortega-2.jpg" alt="sculpture">
-								<span>Gallery Two</span>
-							</a>
-						</div>
-					</li>
-					<li>
-						<div class="item">
-							<a href="#">
-								<img src="images/damian-ortega-3.jpg" alt="sculpture">
-								<span>Gallery Three</span>
-							</a>
-						</div>
-					</li>
-				</ul>
-
-			</div> <!-- .container-->
-
-		</div> <!-- .wrapper-->
-
-		<footer>
-
-			<small>Powered by NGINX</small>
-
-		</footer>
-
-	</body>
+<body>
+    <header>
+        <h1>Thumbnail Gallery with Captions</h1>
+    </header>
+    <div class="wrapper">
+        <div class="container">
+            <ul class="gallery">
+                <li>
+                    <div class="item">
+                        <a href="#">
+                            <img src="images/damian-ortega-1.jpg" alt="sculpture">
+                            <span>Gallery One</span>
+                        </a>
+                    </div>
+                </li>
+                <li>
+                    <div class="item">
+                        <a href="#">
+                            <img src="images/damian-ortega-2.jpg" alt="sculpture">
+                            <span>Gallery Two</span>
+                        </a>
+                    </div>
+                </li>
+                <li>
+                    <div class="item">
+                        <a href="#">
+                            <img src="images/damian-ortega-3.jpg" alt="sculpture">
+                            <span>Gallery Three</span>
+                        </a>
+                    </div>
+                </li>
+            </ul>
+        </div>
+        <!-- .container-->
+    </div>
+    <!-- .wrapper-->
+    <footer>
+        <small>Powered by NGINX</small>
+    </footer>
+</body>
 
 </html>
