--- a/social-media-icons-sprite/index.html
+++ b/social-media-icons-sprite/index.html
@@ -1,60 +1,53 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<meta charset="utf-8">
-		<title>Social Media Icons Sprite</title>
-		<meta name="robots" content="noindex, nofollow">
-		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<link rel="stylesheet" href="styles.css">
-	</head>
-	<body>
 
-		<header>
+<head>
+    <meta charset="utf-8">
+    <title>Social Media Icons</title>
+    <meta name="robots" content="noindex, nofollow">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="styles.css">
+</head>
 
-			<h1>Social Media Icons Sprite</h1>
+<body>
+    <header>
+        <h1>Social Media Icons</h1>
+    </header>
+    <div class="wrapper">
+        <div class="container">
+            <ul class="social-channels">
+                <li>
+                    <a class="facebook" href="http://facebook.com" title="Follow us on Facebook">Facebook</a>
+                </li>
+                <li>
+                    <a class="youtube" href="http://youtube.com" title="Subscribe to our YouTube channel">Youtube</a>
+                </li>
+                <li>
+                    <a class="twitter" href="http://twitter.com" title="Follow us on Twitter">Twitter</a>
+                </li>
+                <li>
+                    <a class="github" href="http://github.com" title="Follow us on Github">Github</a>
+                </li>
+                <li>
+                    <a class="googleplus" href="http://google.com" title="Follow us on GooglePlus">GooglePlus</a>
+                </li>
+                <li>
+                    <a class="linkedin" href="http://linkedin.com" title="Follow us on LinkedIn">LinkedIn</a>
+                </li>
+                <li>
+                    <a class="flickr" href="http://flickr.com" title="Follow us on Flickr">Flickr</a>
+                </li>
+                <li>
+                    <a class="pinterest" href="http://pinterest.com" title="Follow us on Pinterest">Pinterest</a>
+                </li>
+            </ul>
+        </div>
+        <!-- .container-->
+    </div>
+    <!-- .wrapper-->
+    <footer>
+        <small>Powered by NGINX</small>
+    </footer>
+</body>
 
-		</header>
-
-		<div class="wrapper">
-
-			<div class="container">
-
-					<ul class="social-channels">
-						<li>
-							<a rel="external" class="facebook" target="_blank" href="http://facebook.com" title="Follow us on Facebook">Facebook</a>
-						</li>
-						<li>
-							<a rel="external" class="youtube" target="_blank" href="http://youtube.com" title="Subscribe to our YouTube channel">Youtube</a>
-						</li>
-						<li>
-							<a rel="external" class="twitter" target="_blank" href="http://twitter.com" title="Follow us on Twitter">Twitter</a>
-						</li>
-						<li>
-							<a rel="external" class="github" target="_blank" href="http://github.com" title="Follow us on Github">Github</a>
-						</li>
-						<li>
-							<a rel="external" class="googleplus" target="_blank" href="http://google.com" title="Follow us on GooglePlus">GooglePlus</a>
-						</li>
-						<li>
-							<a rel="external" class="linkedin" target="_blank" href="http://linkedin.com" title="Follow us on LinkedIn">LinkedIn</a>
-						</li>
-						<li>
-							<a rel="external" class="flickr" target="_blank" href="http://flickr.com" title="Follow us on Flickr">Flickr</a>
-						</li>
-						<li>
-							<a rel="external" class="pinterest" target="_blank" href="http://pinterest.com" title="Follow us on Pinterest">Pinterest</a>
-						</li>
-					</ul>
-
-			</div> <!-- .container-->
-
-		</div> <!-- .wrapper-->	
-
-		<footer>
-
-			<small>Powered by NGINX</small>
-
-		</footer>
-
-	</body>
 </html>
