--- a/anchored-links/index.html
+++ b/anchored-links/index.html
@@ -106,7 +106,7 @@
 
 		<footer>
 
-			<small>Powered by NGINX</small>
+			<small><a href="https://opensource.org/licenses/MIT">MIT</a></small>
 
 		</footer>
 
