--- a/backgrounds/about.html
+++ b/backgrounds/about.html
@@ -46,7 +46,7 @@
 
 		<footer>
 
-			<small>Powered by NGINX</small>
+			<small><a href="https://opensource.org/licenses/MIT">MIT</a></small>
 
 		</footer> 
 
