--- a/embedded-youtube-video/index.html
+++ b/embedded-youtube-video/index.html
@@ -1,48 +1,35 @@
 <!DOCTYPE html>
-
 <html>
-	<head>
-		<meta charset="utf-8">
-		<title>Embedded Youtube Video</title>
-		<meta name="robots" content="noindex, nofollow">
-		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<link rel="stylesheet" href="styles.css">
-	</head>
 
-	<body>
+<head>
+    <meta charset="utf-8">
+    <title>Embedded Youtube Video</title>
+    <meta name="robots" content="noindex, nofollow">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="styles.css">
+</head>
 
-		<header>
-			
-			<h1>Embedded Media</h1>
-
-		</header>
-
-		<div class="wrapper">
-
-			<div class="container">
-
-				<h2>Embedded Youtube Video</h2>
-
-				<div class="video-container">
-
-					<div class="video">
-
-						<iframe src="http://www.youtube.com/embed/e7549MvSiAQ" frameborder="0" allowfullscreen=""></iframe>
-
-					</div> <!-- .video -->
-
-				</div> <!-- .video-container -->
-
-			</div> <!-- .container -->
-
-		</div> <!-- .wrapper -->
-
-		<footer>
-
-			<small>Powered by NGINX</small>
-
-		</footer>
-
-	</body>
+<body>
+    <header>
+        <h1>Embedded Media</h1>
+    </header>
+    <div class="wrapper">
+        <div class="container">
+            <h2>Embedded Youtube Video</h2>
+            <div class="video-container">
+                <div class="video">
+                    <iframe src="http://www.youtube.com/embed/e7549MvSiAQ" frameborder="0" allowfullscreen=""></iframe>
+                </div>
+                <!-- .video -->
+            </div>
+            <!-- .video-container -->
+        </div>
+        <!-- .container -->
+    </div>
+    <!-- .wrapper -->
+    <footer>
+        <small><a href="https://opensource.org/licenses/MIT">MIT</a></small>
+    </footer>
+</body>
 
 </html>
