--- a/filters/index.html
+++ b/filters/index.html
@@ -31,7 +31,7 @@
 
 		<footer>
 
-			<small>Powered by NGINX</small>
+			<small><a href="https://opensource.org/licenses/MIT">MIT</a></small>
 
 		</footer> 
 
