--- a/navigation/index.html
+++ b/navigation/index.html
@@ -44,7 +44,7 @@
 
 		<footer>
 
-			<small>Powered by NGINX</small>
+			<small><a href="https://opensource.org/licenses/MIT">MIT</a></small>
 
 		</footer> 
 
