--- a/transforms/index.html
+++ b/transforms/index.html
@@ -1,45 +1,33 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<meta charset="utf-8">
-		<title>Transforms</title>
-		<meta name="robots" content="noindex, nofollow">
-		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<link rel="stylesheet" href="styles.css">
-	</head>
-	<body>
 
-		<header>
-			
-			<h1>Transforms</h1>
+<head>
+    <meta charset="utf-8">
+    <title>Transforms</title>
+    <meta name="robots" content="noindex, nofollow">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="styles.css">
+</head>
 
-		</header>
+<body>
+    <header>
+        <h1>Transforms</h1>
+    </header>
+    <div class="wrapper">
+        <div class="container">
+            <h2>Rotate</h2>
+            <img class="rotate" src="images/cat.jpg">
+            <h2>Scale</h2>
+            <img class="scale" src="images/cat.jpg">
+            <h2>Skew</h2>
+            <img class="skew" src="images/cat.jpg">
+        </div>
+        <!-- .container-->
+    </div>
+    <!-- .wrapper-->
+    <footer>
+        <small><a href="https://opensource.org/licenses/MIT">MIT</a></small>
+    </footer>
+</body>
 
-		<div class="wrapper">
-
-			<div class="container">
-
-				<h2>Rotate</h2>
-
-				<img class="rotate" src="images/cat.jpg">
-
-				<h2>Scale</h2>
-
-				<img class="scale" src="images/cat.jpg">
-
-				<h2>Skew</h2>
-
-				<img class="skew" src="images/cat.jpg">
-
-			</div> <!-- .container-->
-
-		</div> <!-- .wrapper-->
-
-		<footer>
-			
-			<small>Powered by NGINX</small>
-
-		</footer>
-
-	</body>
 </html>
