added contact form css

--- a/contact-form/index.html
+++ b/contact-form/index.html
@@ -16,9 +16,19 @@
   <div class="wrapper">
     <div class="container">
       <form action="https://formspree.io/your@email.com" method="POST">
-        <input type="text" name="name">
-        <input type="email" name="_replyto">
-        <input type="submit" value="Send">
+        <p>Name:
+          <br>
+          <input type="text" name="name">
+        </p>
+        <p> Email:
+          <br>
+          <input type="email" name="_replyto">
+          <br>
+          <p>Message:
+            <br>
+            <textarea name="message" rows="10" cols="52"></textarea>
+          </p>
+          <input type="submit" value="Send">
       </form>
     </div>
     <!-- .container-->
