--- a/backgrounds/things.html
+++ b/backgrounds/things.html
@@ -2,29 +2,28 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<title>Background</title>
+		<title>Navigation</title>
 		<meta name="robots" content="noindex, nofollow">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<link rel="stylesheet" href="styles.css">
+		<link rel="stylesheet" href="styles.css">	
 	</head>
 
 	<body id="things">
 		
 		<header>
 
-			<h1>Backgrounds</h1> 
+			<h1>Site Name</h1>
 
 			<nav>
-				<ul class="clearfix">
+				<ul>
 					<li><a href="index.html">Home</a></li>
-					<li><a href="about.html">About</a></li>
-					<li><a href="things.html">Things</a></li>
 					<li><a href="junk.html">Junk</a></li>
 					<li><a href="stuff.html">Stuff</a></li>
+					<li><a href="things.html">Things</a></li>
 				</ul>
 			</nav>
 
-		</header> 
+		</header>
 
 		<div class="wrapper">
 
