--- a/backgrounds/junk.html
+++ b/backgrounds/junk.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Navigation</title>
+  <title>Backgrounds</title>
   <meta name="robots" content="noindex, nofollow">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="styles.css">
@@ -11,7 +11,7 @@
 
 <body id="junk">
   <header>
-    <h1>Site Name</h1>
+    <h1>Backgrounds</h1>
     <nav>
       <ul>
         <li><a href="index.html">Home</a></li>
