added flip effect

--- a/transforms/index.html
+++ b/transforms/index.html
@@ -2,32 +2,37 @@
 <html>
 
 <head>
-    <meta charset="utf-8">
-    <title>Transforms</title>
-    <meta name="robots" content="noindex, nofollow">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="styles.css">
+  <meta charset="utf-8">
+  <title>Transforms</title>
+  <meta name="robots" content="noindex, nofollow">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
-    <header>
-        <h1>Transforms</h1>
-    </header>
-    <div class="wrapper">
-        <div class="container">
-            <h2>Rotate</h2>
-            <img class="rotate" src="images/cat.jpg">
-            <h2>Scale</h2>
-            <img class="scale" src="images/cat.jpg">
-            <h2>Skew</h2>
-            <img class="skew" src="images/cat.jpg">
-        </div>
-        <!-- .container-->
+  <header>
+    <h1>Transforms</h1>
+  </header>
+  <div class="wrapper">
+    <div class="container">
+      <h2>Rotate</h2>
+      <img class="rotate" src="images/cat.jpg">
+      <h2>Scale</h2>
+      <img class="scale" src="images/cat.jpg">
+      <h2>Skew</h2>
+      <img class="skew" src="images/cat.jpg">
+      <h2>Flip</h2>
+      <div class="flip">
+        <div class="front"><img src="images/cat.jpg" alt="cat"></div>
+        <div class="back front"><img src="images/cat-2.jpg" alt="cat"></div>
+      </div>
     </div>
-    <!-- .wrapper-->
-    <footer>
-        <small><a href="https://opensource.org/licenses/MIT">MIT</a></small>
-    </footer>
+    <!-- .container-->
+  </div>
+  <!-- .wrapper-->
+  <footer>
+    <small><a href="https://opensource.org/licenses/MIT">MIT</a></small>
+  </footer>
 </body>
 
 </html>
