changes flickr to instagram

--- a/social-media-icons-sprite/index.html
+++ b/social-media-icons-sprite/index.html
@@ -2,52 +2,52 @@
 <html>
 
 <head>
-    <meta charset="utf-8">
-    <title>Social Media Icons</title>
-    <meta name="robots" content="noindex, nofollow">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="styles.css">
+  <meta charset="utf-8">
+  <title>Social Media Icons</title>
+  <meta name="robots" content="noindex, nofollow">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
-    <header>
-        <h1>Social Media Icons</h1>
-    </header>
-    <div class="wrapper">
-        <div class="container">
-            <ul class="social-channels">
-                <li>
-                    <a class="facebook" href="http://facebook.com" title="Follow us on Facebook">Facebook</a>
-                </li>
-                <li>
-                    <a class="youtube" href="http://youtube.com" title="Subscribe to our YouTube channel">Youtube</a>
-                </li>
-                <li>
-                    <a class="twitter" href="http://twitter.com" title="Follow us on Twitter">Twitter</a>
-                </li>
-                <li>
-                    <a class="github" href="http://github.com" title="Follow us on Github">Github</a>
-                </li>
-                <li>
-                    <a class="googleplus" href="http://google.com" title="Follow us on GooglePlus">GooglePlus</a>
-                </li>
-                <li>
-                    <a class="linkedin" href="http://linkedin.com" title="Follow us on LinkedIn">LinkedIn</a>
-                </li>
-                <li>
-                    <a class="flickr" href="http://flickr.com" title="Follow us on Flickr">Flickr</a>
-                </li>
-                <li>
-                    <a class="pinterest" href="http://pinterest.com" title="Follow us on Pinterest">Pinterest</a>
-                </li>
-            </ul>
-        </div>
-        <!-- .container-->
+  <header>
+    <h1>Social Media Icons</h1>
+  </header>
+  <div class="wrapper">
+    <div class="container">
+      <ul class="social-channels">
+        <li>
+          <a class="facebook" href="http://facebook.com">Facebook</a>
+        </li>
+        <li>
+          <a class="youtube" href="http://youtube.com">Youtube</a>
+        </li>
+        <li>
+          <a class="twitter" href="http://twitter.com">Twitter</a>
+        </li>
+        <li>
+          <a class="github" href="http://github.com">Github</a>
+        </li>
+        <li>
+          <a class="googleplus" href="http://google.com">GooglePlus</a>
+        </li>
+        <li>
+          <a class="linkedin" href="http://linkedin.com">LinkedIn</a>
+        </li>
+        <li>
+          <a class="instagram" href="http://instagram.com">Instagram</a>
+        </li>
+        <li>
+          <a class="pinterest" href="http://pinterest.com">Pinterest</a>
+        </li>
+      </ul>
     </div>
-    <!-- .wrapper-->
-    <footer>
-        <small><a href="https://opensource.org/licenses/MIT">MIT</a></small>
-    </footer>
+    <!-- .container-->
+  </div>
+  <!-- .wrapper-->
+  <footer>
+    <small><a href="https://opensource.org/licenses/MIT">MIT</a></small>
+  </footer>
 </body>
 
 </html>
