--- a/thumbnail-gallery-captions/index.html
+++ b/thumbnail-gallery-captions/index.html
@@ -15,33 +15,26 @@
   </header>
   <div class="wrapper">
     <div class="container">
-      <ul class="gallery">
-        <li>
-          <a href="#">
-            <img src="images/damian-ortega-1.jpg" alt="sculpture">
-            <span>Gallery One</span>
-          </a>
-        </li>
-        <li>
-          <a href="#">
-            <img src="images/damian-ortega-2.jpg" alt="sculpture">
-            <span>Gallery Two</span>
-          </a>
-        </li>
-        <li>
-          <a href="#">
-            <img src="images/damian-ortega-3.jpg" alt="sculpture">
-            <span>Gallery Three</span>
-          </a>
-        </li>
-      </ul>
+      <div class="gallery">
+        <a href="#">
+          <img src="images/damian-ortega-1.jpg" alt="sculpture">
+          <span>Gallery One</span>
+        </a>
+        <a href="#">
+          <img src="images/damian-ortega-2.jpg" alt="sculpture">
+          <span>Gallery Two</span>
+        </a>
+        <a href="#">
+          <img src="images/damian-ortega-3.jpg" alt="sculpture">
+          <span>Gallery Three</span>
+        </a>
+      </div>
+      <!-- .container-->
     </div>
-    <!-- .container-->
-  </div>
-  <!-- .wrapper-->
-  <footer>
-    <small><a href="https://opensource.org/licenses/MIT">MIT</a></small>
-  </footer>
+    <!-- .wrapper-->
+    <footer>
+      <small><a href="https://opensource.org/licenses/MIT">MIT</a></small>
+    </footer>
 </body>
 
 </html>
