--- a/thumbnail-gallery-zoom/index.html
+++ b/thumbnail-gallery-zoom/index.html
@@ -15,30 +15,23 @@
   </header>
   <div class="wrapper">
     <div class="container">
-      <ul class="gallery">
-        <li>
-          <div>
-            <a href=""><img src="images/misplaced-ruins-1.jpg" alt="cat"></a>
-          </div>
-        </li>
-        <li>
-          <div>
-            <a href=""><img src="images/misplaced-ruins-2.jpg" alt="cat"></a>
-          </div>
-        </li>
-        <li>
-          <div>
-            <a href=""><img src="images/misplaced-ruins-3.jpg" alt="cat"></a>
-          </div>
-        </li>
-      </ul>
+      <div class="gallery">
+        <a href="">
+          <img src="images/misplaced-ruins-1.jpg" alt="cat">
+        </a>
+        <a href="">
+          <img src="images/misplaced-ruins-2.jpg" alt="cat">
+        </a>
+        <a href="">
+          <img src="images/misplaced-ruins-3.jpg" alt="cat">
+        </a>
+      </div>
+      <!-- .container-->
     </div>
-    <!-- .container-->
-  </div>
-  <!-- .wrapper-->
-  <footer>
-    <small><a href="https://opensource.org/licenses/MIT">MIT</a></small>
-  </footer>
+    <!-- .wrapper-->
+    <footer>
+      <small><a href="https://opensource.org/licenses/MIT">MIT</a></small>
+    </footer>
 </body>
 
 </html>
