polyfill for srcset no longer required

--- a/responsive-images/index.html
+++ b/responsive-images/index.html
@@ -1,43 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8">
-		<title>Responsive Images</title>
-		<meta name="robots" content="noindex, nofollow">
-		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<link rel="stylesheet" href="styles.css">
-		<script src="picturefill.js"></script>
-	</head>
 
-	<body>
+<head>
+	<meta charset="UTF-8">
+	<title>Responsive Images</title>
+	<meta name="robots" content="noindex, nofollow">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="stylesheet" href="styles.css">
+</head>
 
-		<header>
-
-			<h1>Responsive Images</h1>
-
-		</header>
-
-		<div class="wrapper">
-				
-			<div class="container">
-
-			<img alt="Damián Ortega concrete cubes" src="images/image-360x360.jpg"
-			srcset="images/image-360x360.jpg 360w,
+<body>
+	<header>
+		<h1>Responsive Images</h1>
+	</header>
+	<div class="wrapper">
+		<div class="container">
+			<img alt="Damián Ortega concrete cubes" src="images/image-360x360.jpg" srcset="images/image-360x360.jpg 360w,
 					images/image-480x480.jpg 480w,
 					images/image-640x640.jpg 640w,
 					images/image-768x768.jpg 768w,
 					images/image-1080x1080.jpg 768w" sizes="88vw">
-
-			</div>
-
 		</div>
-
-		<footer>
-
-			<small><a href="https://opensource.org/licenses/MIT">MIT</a></small>
-			
-		</footer>
-
-	</body>
+		<!--  .container -->
+	</div>
+	<!--  .wrapper -->
+	<footer>
+		<small><a href="https://opensource.org/licenses/MIT">MIT</a></small>
+	</footer>
+</body>
 
 </html>
