more advanced example using media queries

--- a/responsive-images/index.html
+++ b/responsive-images/index.html
@@ -15,12 +15,21 @@
 	</header>
 	<div class="wrapper">
 		<div class="container">
-			<img alt="Damián Ortega concrete cubes" src="images/image-360x360.jpg" srcset="images/image-360x360.jpg 360w,
-					images/image-480x480.jpg 480w,
-					images/image-640x640.jpg 640w,
-					images/image-768x768.jpg 768w,
-					images/image-1080x1080.jpg 768w" sizes="88vw">
-		</div>
+			<div class="half">
+				<img alt="Damián Ortega concrete cubes" src="images/image-360x360.jpg" srcset="images/image-360x360.jpg 360w,
+						images/image-480x480.jpg 480w,
+						images/image-640x640.jpg 640w,
+						images/image-768x768.jpg 768w,
+						images/image-1080x1080.jpg 768w" sizes="(min-width: 48em) 42.24vw, 88vw">
+				</div>
+				<div class="half">
+					<h2>Heading</h2>
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsam voluptatum aut vitae blanditiis, atque aspernatur numquam accusantium similique dolores tenetur nihil quia, dolor totam non, beatae inventore vel iste voluptates!</p>
+
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt animi, distinctio quis, nam laborum ab! Ullam, necessitatibus, pariatur. Nulla deleniti eius deserunt nesciunt neque voluptate. Facere, aliquam tempora nihil iure.</p>
+				</div>
+			</div>
+
 		<!--  .container -->
 	</div>
 	<!--  .wrapper -->
