--- a/contact-form/index.html
+++ b/contact-form/index.html
@@ -15,18 +15,18 @@
   </header>
   <div class="wrapper">
     <div class="container">
-      <form action="https://formspree.io/your@email.com" method="POST">
+      <form action="https://formspree.io/your@email.com" method="post">
         <p>Name:
           <br>
-          <input type="text" name="name">
+          <input type="text" name="name" placeholder="your name">
         </p>
-        <p> Email:
+        <p>Email:
           <br>
-          <input type="email" name="_replyto">
+          <input type="email" name="_replyto" placeholder="your@email.com" required>
           <br>
           <p>Message:
             <br>
-            <textarea name="message" rows="10" cols="52"></textarea>
+            <textarea name="message" rows="10" cols="52" placeholder="your message"></textarea>
           </p>
           <input type="submit" value="Send">
       </form>
